tests/baselines/reference/moduleResolutionWithSuffixes_one_externalTSModule.errors.txt
/tsconfig.json(4,23): error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


==== /tsconfig.json (1 errors) ====
    {
    	"compilerOptions": {
    		"outDir": "bin",
    		"moduleResolution": "node",
    		                    ~~~~~~
!!! error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
    		"traceResolution": true,
    		"moduleSuffixes": [".ios"]
    	}
    }
    
==== /test.ts (0 errors) ====
    import { ios } from "some-library";
    
==== /node_modules/some-library/index.ios.ts (0 errors) ====
    export function ios() {}
==== /node_modules/some-library/index.ts (0 errors) ====
    export function base() {}